chandeliers-lus/tests/warn/dead_code/unused-toplevel.stderr
error: method `step` is never used
 --> tests/warn/dead_code/unused-toplevel.rs:4:10
  |
4 |     node foo() returns ();
  |          ^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/unused-toplevel.rs:1:9
  |
1 | #![deny(dead_code)]
  |         ^^^^^^^^^

error: constant `X__lus_0_global` is never used
 --> tests/warn/dead_code/unused-toplevel.rs:7:11
  |
7 |     const X : int = 0;
  |           ^
