chandeliers-lus/tests/warn/dead_code/unused-toplevel.rs
#![deny(dead_code)]

chandeliers_lus::decl! {
    node foo() returns ();
    let tel;

    const X : int = 0;
}

fn main() {}
